<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Plant3">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/plantInfoTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/infoPlant"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textAboutPlant2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:text="@string/textAboutPlant" />

        <TextView
            android:id="@+id/textPlantSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:text="@string/textEnterDate" />

        <EditText
            android:id="@+id/editTextDatePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="date"
            android:textSize="16sp"
            android:hint="@string/exampleDate" />

        <TextView
            android:id="@+id/textEnterPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:text="@string/textEnterPhoto" />

        <Button
            android:id="@+id/btnGetPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="8dp"
            android:onClick="OnImageGet"
            android:text="@string/textPhoto" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBackTo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="onBackRegisterPlant2"
                android:text="@string/textBack" />

            <Button
                android:id="@+id/btnStartInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:onClick="onRegisterPlant3"
                android:text="@string/nextStep" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>