<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="396dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="98dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textWelcomePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/infoPlant"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textTutorialWelcomePage"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/tutorialFillForm"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonContinueMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:onClick="OnContinueClick"
            android:text="@string/nextStep" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>